--- a/package.json
+++ b/package.json
@@ -11,14 +11,27 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
+    "express-jwt": "^8.4.1",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
+    "formidable": "^2.1.1",
+    "html2canvas": "^1.4.1",
+    "html2canvas-proxy": "^1.0.1",
+    "i": "^0.3.7",
+    "jsonwebtoken": "^9.0.0",
+    "mongo": "^0.1.0",
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
+    "mongosh": "^1.8.0",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
