--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
     "mongosh": "^1.8.0",
+    "node-fetch": "^3.3.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "uuid": "^9.0.0"
